Add link to this repo in soen331 talk

--- a/SOEN331-PyADBC.ipynb
+++ b/SOEN331-PyADBC.ipynb
@@ -1018,7 +1018,7 @@
       "\n",
       "PyADBC is BSD licensed and is available here: https://github.com/tarmstrong/pyadbc\n",
       "\n",
-      "These slides are available at: "
+      "These slides are available at: https://github.com/tarmstrong/talks"
      ]
     }
    ],
